clusters/cl01tl/manifests/garage-operator/MutatingWebhookConfiguration-garage-operator-mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: garage-operator-mutating
  labels:
    helm.sh/chart: garage-operator-0.8.1
    app.kubernetes.io/name: garage-operator
    app.kubernetes.io/instance: garage-operator
    control-plane: controller-manager
    app.kubernetes.io/version: "0.8.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: garage-operator/garage-operator-webhook-cert
  namespace: garage-operator
webhooks:
  - name: mgaragebucket.kb.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: garage-operator-webhook
        namespace: garage-operator
        path: /mutate-garage-rajsingh-info-v1beta1-garagebucket
    failurePolicy: Fail
    rules:
      - apiGroups:
          - garage.rajsingh.info
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - garagebuckets
    sideEffects: None
  - name: mgaragecluster.kb.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: garage-operator-webhook
        namespace: garage-operator
        path: /mutate-garage-rajsingh-info-v1beta2-garagecluster
    failurePolicy: Fail
    rules:
      - apiGroups:
          - garage.rajsingh.info
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - garageclusters
    sideEffects: None
  - name: mgarageclusterv1beta1.kb.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: garage-operator-webhook
        namespace: garage-operator
        path: /mutate-garage-rajsingh-info-v1beta1-garagecluster
    failurePolicy: Fail
    rules:
      - apiGroups:
          - garage.rajsingh.info
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - garageclusters
    sideEffects: None
  - name: mgaragekey.kb.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: garage-operator-webhook
        namespace: garage-operator
        path: /mutate-garage-rajsingh-info-v1beta1-garagekey
    failurePolicy: Fail
    rules:
      - apiGroups:
          - garage.rajsingh.info
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - garagekeys
    sideEffects: None
  - name: mgaragenode.kb.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: garage-operator-webhook
        namespace: garage-operator
        path: /mutate-garage-rajsingh-info-v1beta1-garagenode
    failurePolicy: Fail
    rules:
      - apiGroups:
          - garage.rajsingh.info
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - garagenodes
    sideEffects: None
